@@ -1,3 +1,5 @@
+* Agents Monitoring: improve error handling when dialer process is shut down in
+  the middle of monitoring.
 * Installer: change form_field.etiqueta and form_field.value fields to TEXT.
   Fixes Elastix bug #1250.
 * Dialer: put workaround for PHP bug #18556 which breaks dialerd with Turkish
